--- a/Shoes Website/index.html
+++ b/Shoes Website/index.html
@@ -314,10 +314,7 @@
             </div>
 
             <div class="about_text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste a velit voluptatibus.
-                    Provident tempore sunt cumque error earum assumenda facilis vitae eligendi quae modi,
-                    praesentium possimus minima numquam reprehenderit qui fuga aspernatur, eos dolore deleniti
-                    odio voluptate veniam? Voluptatem, nesciunt!
+                <p>The site is convenient and easy to use, easy to buy and of course comfortable shoes for everyday use, for walking, running, etc
                 </p>
             </div>
         </div>
@@ -359,10 +356,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae assumenda unde necessitatibus error expedita ad,
-                        debitis commodi aspernatur sint vitae placeat laboriosam delectus
-                        nulla sunt, quos maxime! Ipsa, repudiandae accusantium?
+                        Perfect shoes, I like them very much, of course I will order again! 
                     </p>
                 </div>
             </div>
@@ -388,10 +382,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae assumenda unde necessitatibus error expedita ad,
-                        debitis commodi aspernatur sint vitae placeat laboriosam delectus
-                        nulla sunt, quos maxime! Ipsa, repudiandae accusantium?
+                        The shoes are really comfortable, the only problem was with the time it took for the delivery to arrive.
                     </p>
                 </div>
             </div>
@@ -417,10 +408,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae assumenda unde necessitatibus error expedita ad,
-                        debitis commodi aspernatur sint vitae placeat laboriosam delectus
-                        nulla sunt, quos maxime! Ipsa, repudiandae accusantium?
+                        I didn't like the shoes, the size didn't fit me at all.
                     </p>
                 </div>
             </div>
@@ -449,10 +437,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae assumenda unde necessitatibus error expedita ad,
-                        debitis commodi aspernatur sint vitae placeat laboriosam delectus
-                        nulla sunt, quos maxime! Ipsa, repudiandae accusantium?
+                        The shoes are perfect and of course I will buy again, I would love for the delivery to arrive faster next time.
                     </p>
                 </div>
             </div>
@@ -465,7 +450,7 @@
                         </div>
                         
                         <div class="name">
-                            <strong>Linoy Ashram</strong>
+                            <strong>Linoy Levy</strong>
                             <div class="like">
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -478,10 +463,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae assumenda unde necessitatibus error expedita ad,
-                        debitis commodi aspernatur sint vitae placeat laboriosam delectus
-                        nulla sunt, quos maxime! Ipsa, repudiandae accusantium?
+                        Wow wow I'm in love with the shoes I ordered, my best purchase this year.
                     </p>
                 </div>
             </div>
@@ -507,10 +489,7 @@
                 </div>
                 <div class="comment">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Molestiae assumenda unde necessitatibus error expedita ad,
-                        debitis commodi aspernatur sint vitae placeat laboriosam delectus
-                        nulla sunt, quos maxime! Ipsa, repudiandae accusantium?
+                        Great shoes, they are very comfortable for everyday and for sports.
                     </p>
                 </div>
             </div>
@@ -526,20 +505,20 @@
             <div class="services_box">
                 <i class="fa-solid fa-truck-fast"></i>
                 <h3>Fast Delivery</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <p></p>
             </div>
         
 
             <div class="services_box">
                 <i class="fa-solid fa-rotate-left"></i>
                 <h3>10 Days Replacement</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <p></p>
             </div>
 
             <div class="services_box">
                 <i class="fa-solid fa-headset"></i>
                 <h3>24 x 7 Support</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                <p></p>
             </div>
         </div>
     </div>
